<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">CHS Patient App</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_section1">Home Page</string>
    <string name="title_section2">Access Info</string>
    <string name="title_section3">Add Reading</string>
    <string name="title_section4">Edit Profile</string>
    <string name="title_section5">Fix Appointment</string>
    <string name="title_section6">Get Prescription</string>
    <string name="title_section7">Notifications</string>
    <string name="title_section8">FAQ</string>
    <string name="title_section9">Health Tips</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Sign Out</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="title_activity_registration">Registration</string>
    <string name="uid">UID</string>
    <string name="user">Username</string>
    <string name="pass">Password</string>
    <string name="address">Address</string>
    <string name="age">Age</string>
    <string name="bloodgroup">Bloodgroup</string>
    <string name="signup">Sign Up</string>
    <string name="str1">Male</string>
    <string name="str2">Female</string>
    <string name="str3">Other</string>
    <string name="phone">Phone Number</string>
    <string name="gender">Gender</string>
    <string name="update">Update</string>
    <string name="register">Register</string>
    <string name="accessinfotitle">Your Medical History</string>
    <string name="title">CHS PATIENT APPLICATION</string>

</resources>